--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/pasta-salad.html">Awesome Pasta Salad</a></li>
-      <li><a href="recipes/potato-salad.html">Restaurant-Style Potato Salad</a></li>
-      <li><a href="recipes/ramen-broccoli-slaw.html">Crunchy Ramen Broccoli Slaw</a></li>
+      <li>
+        <a href="recipes/potato-salad.html">Restaurant-Style Potato Salad</a>
+      </li>
+      <li>
+        <a href="recipes/ramen-broccoli-slaw.html"
+          >Crunchy Ramen Broccoli Slaw</a
+        >
+      </li>
     </ul>
+    <img
+      src="https://thumbs.dreamstime.com/z/happy-african-american-girl-apron-cooking-salad-kitchen-millennial-chopping-fresh-vegetables-table-preparing-dinner-keeping-227973599.jpg"
+      alt="A happy young lady enjoy her kitchen time!"
+      style="max-width: 800px;"
+    />
   </body>
 </html>
