--- a/recipes/potato-salad.html
+++ b/recipes/potato-salad.html
@@ -13,5 +13,38 @@
       alt="A bowl of potato salad"
     />
     <h2>Quick and Easy Potato Salad in 30 Minutes!</h2>
+    <p>
+      This is a traditional and easy-to-make russet potato salad recipe. It
+      takes 30 minutes to prepare from cutting board to dinner table!
+    </p>
+    <h3>Ingrediants</h3>
+    <ul>
+      <li>2 pounds russet potatoes</li>
+      <li>1 cup mayonnaise</li>
+      <li>4 teaspoons sweet pickle relish</li>
+      <li>4 teaspoons white sugar</li>
+      <li>2 teaspoons chopped white onion</li>
+      <li>2 teaspoons prepared mustard</li>
+      <li>1 teaspoon white wine vinegar</li>
+      <li>1 tablespoon minced celery</li>
+      <li>1 teaspoon minced pimento</li>
+      <li>½ teaspoon shredded carrot</li>
+      <li>¼ teaspoon dried parsley</li>
+      <li>¼ teaspoon ground black pepper</li>
+      <li>salt to taste</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+      <li>
+        Bring a large pot of salted water to a boil. Add potatoes and cook until
+        tender but still firm, about 15 minutes. Drain, cool, and chop.
+      </li>
+      <li>
+        In a large bowl, combine potatoes, mayonnaise, sweet pickle relish,
+        sugar, onion, mustard, vinegar, celery, pimentos, carrot, parsley,
+        pepper, and salt. Mix well, chill and serve.
+      </li>
+    </ol>
+    <a href="../index.html">Back to Home Page</a>
   </body>
 </html>
